# smp-rs

mcumgr-smp/: Cargo.toml
mcumgr-smp/src/: lib.rs
mcumgr-smp/src/transport/: ble.rs  cbor.rs  error.rs  mod.rs  serial.rs  udp.rs
smp-tool/: Cargo.toml
smp-tool/src/: main.rs  shell.rs
