[package]
name = "mcumgr-smp"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sascha Zenglein <zenglein@gessler.de>"]
description = "An implementation of the smp protocol for microcontrollers in pure rust."
readme = "README.md"
repository = "https://github.com/Gessler-GmbH/smp-rs"
homepage = "https://github.com/Gessler-GmbH/smp-rs"
categories = ["embedded", "development-tools"]
keywords = ["smp", "zephyr", "rtos", "mcumgr"]

[dependencies]
thiserror = "1.0"


ciborium = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

base64 = { version = "0.21", optional = true }
crc = { version = "3.0", optional = true }

tracing = "0.1"

# Transports
tokio = { version = "1.21", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio-serial = { version = "5.4", optional = true }
pin-project-lite = "0.2"
btleplug = { version = "0.11", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1.7", optional = true }

[dev-dependencies]
tokio = { features = [ "rt", "macros" ]}

[features]
default = ["serial", "payload-cbor", "transports"]
serial = ["base64", "crc", ]
payload-cbor = ["serde", "serde_bytes", "ciborium"]
transport = [ "dep:tokio", "tokio/io-util" ]
transports = [ "transport-serial", "transport-udp", "transport-ble" ]
transport-serial = [ "transport", "dep:tokio-serial", "dep:tokio", "tokio/io-util" ]
transport-udp = [ "transport", "dep:tokio", "tokio/net" ]
transport-ble = [ "transport", "dep:tokio", "dep:btleplug", "dep:futures", "tokio/sync", "tokio/rt", "dep:tokio-util", "dep:uuid" ]